--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Voam Cool Teniska</h1>
+              <h1>Voam Teniska</h1>
               <h2>12 lv.</h2>
             </div>
           </div>
@@ -58,11 +58,34 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
+                <img class="open-popup" src="img/shorts.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/model1.jpeg" loading="lazy">
+                <img class="open-popup" src="img/t-shirt1.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/t-shirt2.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Voam Gashti</h1>
+              <h2>12 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/t-shirt3.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/t-shirt1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
@@ -73,30 +96,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Voam Cool Teniska</h1>
-              <h2>12 lv.</h2>
-            </div>
-          </div>
-          <div class="product-block">
-            <div class="slideshow-container">
-              <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/model1.jpeg" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
-              </div>
-              <a class="prev">&#10094;</a>
-              <a class="next">&#10095;</a>
-            </div>
-            <div class="product-content open-popup">
-              <p>In Stock</p>
-              <h1>Voam Cool Teniska</h1>
+              <h1>Voam Teniska2</h1>
               <h2>12 lv.</h2>
             </div>
           </div>
