--- a/index.html
+++ b/index.html
@@ -34,70 +34,96 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/Devotion B front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/model1.jpeg" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/Devotion B back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Voam Teniska</h1>
-              <h2>12 lv.</h2>
+              <h1>Devotion Black</h1>
+              <h2>30 lv.</h2>
             </div>
           </div>
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/shorts.png" loading="lazy">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/devotion pants b front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/t-shirt1.png" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img class="open-popup" src="img/t-shirt2.png" loading="lazy">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/Devotion pants b back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Voam Gashti</h1>
-              <h2>12 lv.</h2>
+              <h1>Devotion Pants Black</h1>
+              <h2>30 lv.</h2>
             </div>
           </div>
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/t-shirt3.png" loading="lazy">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/devotion pants w front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/t-shirt1.png" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img class="open-popup" src="img/model2.jpeg" loading="lazy">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/devotion pants w back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Voam Teniska2</h1>
-              <h2>12 lv.</h2>
+              <h1>Devotion Pants White</h1>
+              <h2>30 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/Devotion W front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/Devotion W back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Devotion White</h1>
+              <h2>30 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/limited edition B front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/limited edition B back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Limited Edition Black</h1>
+              <h2>30 lv.</h2>
             </div>
           </div>
         </ul>
