--- a/index.html
+++ b/index.html
@@ -130,16 +130,14 @@
       </div>
       <div class="section" id="about">
         <div class="content">
-          <h1>WE ARE KNOWN FOR OUR ORIGINAL DESIGNS AND OUR QUALITY</h1>
-          <p>For us, one of our most important things is our clients to be satisfied. We try to achieve this through
-            constant improvement of the quality and through the creation of new and interesting designs.</p>
-          <p>For us, one of our most important things is our clients to be satisfied. We try to achieve this through
-            constant improvement of the quality and through the creation of new and interesting designs.</p>
-          <p>For us, one of our most important things is our clients to be satisfied. We try to achieve this through
-            constant improvement of the quality and through the creation of new and interesting designs.</p>
-          <p>For us, one of our most important things is our clients to be satisfied. We try to achieve this through
-            constant improvement of the quality and through the creation of new and interesting designs.</p>
+          <h1>Searching for a brand with high quality products, friendly customer support and bright ideas, building a community around itself?</h1>
+          <h1>Then you might be interested in VOAM CLOTHING.</h1>
+          <p>Voam is a Clothing brand with roots located in Bulgaria. Within our first year we have managed to sell out multiple drops. We saw potential and decided to keep going. All the motivation comes from our clients and all the positive feedback we get. Our main goal is to deliver pleasurable experience to every single client along with a high-quality product representing the wave we are currently on. </p>
+          <p>Voam Clothing has established itself with its quality products and customer support. We want to show our customers that with each purchase they do not only receive a product, but they also contribute to the community that they are already part of- The Voam community. Every drop is symbolic and represents a new message we want to get through the people. We want everyone to find a piece he/she can see himself/herself in.</p>
+          <p>If you feel we could help each other and cooperate on a project, we would be happy to discuss possible future collaborations. You can find our socials down in the Social Drawer.</p>
+          <p>We are awaiting you!</p>
         </div>
+        <div class="play-on-hover"></div>
       </div>
       <div id="contact">
         <svg class="section-divider" viewBox="0 0 1920 60" aria-hidden="true">
