--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/styles.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <link rel="icon" type="image/x-icon" href="img/mouth-voam.png">
@@ -47,7 +47,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Devotion Black</h1>
+              <h1>Devotion Black T-shirt</h1>
               <h2>30 lv.</h2>
             </div>
           </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Devotion White</h1>
+              <h1>Devotion White T-shirt</h1>
               <h2>30 lv.</h2>
             </div>
           </div>
