--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <link rel="icon" type="image/x-icon" href="img/mouth-voam.png">
-  <script async src="/app.js"></script>
+  <script async src="app.js"></script>
   <title>Voam</title>
 </head>
-
 <body>
   <div id="site-background"></div>
   <div class="enter">
@@ -20,10 +20,12 @@
   <div class="main">
     <nav class="nav-bar">
       <li><img id="logo-nav-bar" src="img/logo.png" loading="lazy" /></li>
+      <div class="sections-buttons">
       <li><a class="section-buttons" href="#home">Home</a></li>
       <li><a class="section-buttons" href="#items">Items</a></li>
       <li><a class="section-buttons" href="#about">About</a></li>
       <li><a class="section-buttons" href="#contact">Contact</a></li>
+    </div>
       <li><i id="shopping-cart" class="fa-solid fa-cart-shopping"></i></li>
     </nav>
     <div class="main-body">
@@ -148,7 +150,7 @@
         <div class="content-contact">
           <div class="social-media">
             <h1>The Social Drawer</h1>
-            <span>Hover over the drawer to open</span>
+            <span>Hover/Click over the drawer to open</span>
             <div class="drawer">
               <div class="box">
                 <a href="https://www.instagram.com/voamclothing_/" target="_blank" class="ball ball-1 instagram">
