--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/Devotion B front.png" loading="lazy">
+                <img class="open-popup" src="img/Devotion_B_front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/Devotion B back.png" loading="lazy">
+                <img class="open-popup" src="img/Devotion_B_back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
@@ -57,11 +57,11 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/devotion pants b front.png" loading="lazy">
+                <img class="open-popup" src="img/devotion_pants_b_front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/Devotion pants b back.png" loading="lazy">
+                <img class="open-popup" src="img/Devotion_pants_b_back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
@@ -76,11 +76,11 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/devotion pants w front.png" loading="lazy">
+                <img class="open-popup" src="img/devotion_pants_w_front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/devotion pants w back.png" loading="lazy">
+                <img class="open-popup" src="img/devotion_pants_w_back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
@@ -95,11 +95,11 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/Devotion W front.png" loading="lazy">
+                <img class="open-popup" src="img/Devotion_W_front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/Devotion W back.png" loading="lazy">
+                <img class="open-popup" src="img/Devotion_W_back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
@@ -114,11 +114,11 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/limited edition B front.png" loading="lazy">
+                <img class="open-popup" src="img/limited_edition_B_front.png" loading="lazy">
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/limited edition B back.png" loading="lazy">
+                <img class="open-popup" src="img/limited_edition_B_back.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
               <a class="next">&#10095;</a>
