--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <link rel="icon" type="image/x-icon" href="img/mouth-voam.png">
-  <script async src="app.js"></script>
+  <script defer src="app.js"></script>
   <title>Voam</title>
 </head>
 <body>
