--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="sections-buttons">
       <li><a class="section-buttons" href="#home">Home</a></li>
       <li><a class="section-buttons" href="#items">Items</a></li>
-      <li><a class="section-buttons" href="#about">About</a></li>
-      <li><a class="section-buttons" href="#contact">Contact</a></li>
+      <li><a class="section-buttons about-section" href="#about">About</a></li>
+      <li><a class="section-buttons contact-section" href="#contact">Contact</a></li>
     </div>
       <li><i id="shopping-cart" class="fa-solid fa-cart-shopping"></i></li>
     </nav>
@@ -49,8 +49,8 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Devotion Black T-shirt</h1>
-              <h2>30 lv.</h2>
+              <h1>Devotion Tee <br> Black</h1>
+              <h2>50 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -69,7 +69,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>Devotion Pants Black</h1>
-              <h2>30 lv.</h2>
+              <h2>50 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -88,7 +88,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>Devotion Pants White</h1>
-              <h2>30 lv.</h2>
+              <h2>50 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -106,8 +106,8 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Devotion White T-shirt</h1>
-              <h2>30 lv.</h2>
+              <h1>Devotion Tee White</h1>
+              <h2>50 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -125,8 +125,46 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>Limited Edition Black</h1>
-              <h2>30 lv.</h2>
+              <h1>Limited Edition Tee Black</h1>
+              <h2>50 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/mental_B_front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/mental_B_back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Mental Illness Tee Black</h1>
+              <h2>50 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/mental_w_front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/mental_w_back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Mental Illness Tee White</h1>
+              <h2>50 lv.</h2>
             </div>
           </div>
         </ul>
@@ -182,10 +220,6 @@
         </div>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"
-      integrity="sha512-aoTNnqZcT8B4AmeCFmiSnDlc4Nj/KPaZyB5G7JnOnUEkdNpCZs1LCankiYi01sLTyWy+m2P+W4XM+BuQ3Q4/Dg=="
-      crossorigin="anonymous"></script>
-    </script>
 </body>
 
 </html>
