--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Devotion Tee <br> Black</h1>
               <h2>50 lv.</h2>
             </div>
@@ -105,7 +105,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Devotion Tee White</h1>
               <h2>50 lv.</h2>
             </div>
@@ -217,6 +217,7 @@
               <div class="cover"><span></span></div>
             </div>
           </div>
+          <p id="copyright-text">Copyright © 2023 Voam Clothing. All Rights Reserved.</p>
         </div>
       </div>
     </div>
