--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <div class="main">
     <nav class="nav-bar">
-      <li><img id="logo-nav-bar" src="img/logo.png" loading="lazy" /></li>
+      <li><a href="https://voamclothing.com/"><img id="logo-nav-bar" src="img/logo.png" loading="lazy" /></a></li>
       <div class="sections-buttons">
       <li><a class="section-buttons" href="#home">Home</a></li>
       <li><a class="section-buttons" href="#items">Items</a></li>
