--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Mental Illness Tee Black</h1>
               <h2>50 lv.</h2>
             </div>
@@ -162,7 +162,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Mental Illness Tee White</h1>
               <h2>50 lv.</h2>
             </div>
