--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
               <div class="cover"><span></span></div>
             </div>
           </div>
-          <p id="copyright-text">Copyright © 2023 Voam Clothing. All Rights Reserved.</p>
+          <div class="terms-and-copyright">
+            <p id="terms">Privacy Policy</p>
+            <p id="copyright-text">Copyright © 2023 Voam Clothing. All Rights Reserved.</p>
+          </div>
         </div>
       </div>
     </div>
