--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Devotion Pants Black</h1>
               <h2>50 lv.</h2>
             </div>
@@ -86,7 +86,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Devotion Pants White</h1>
               <h2>50 lv.</h2>
             </div>
