--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="event">
     <h1 class="date">11.11</h1>
-    <p class="text-date">Voam Clothing will represent it's winter collection on the 11th November, 2023 in "Yalta" Club, Sofia.</p>
+    <p class="text-date">Voam Clothing will represent its winter collection on the 11th November, 2023 in "Yalta" Club, Sofia.</p>
   </div>
   <div id="site-background"></div>
   <div class="enter">
