--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="main-body">
       <div class="section" id="home">
-        <a class="section-buttons" href="#items">Shop Now</a>
+        <a class="section-buttons" href="#items">BLACK FRIDAY</a>
       </div>
       <div class="section" id="items">
         <ul class="items-list">
@@ -54,7 +54,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“BLACK SHEEP” HOODIE </h1>
-              <h2>90 lv.</h2>
+              <h2>70 lv.</h2>
+              <span class="discount">90 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -119,7 +120,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“DEVOTION” BEANIE</h1>
-              <h2>30 lv.</h2>
+              <h2>25 lv.</h2>
+              <span class="discount">30 lv.</span>
             </div>
           </div>
         </ul>
