--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
+                <div class="numbertext">1 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
                 <img class="open-popup" src="img/hoodie1_1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
+                <div class="numbertext">2 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
                 <img class="open-popup" src="img/hoodie1_2.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
+                <div class="numbertext">3 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
                 <img class="open-popup" src="img/hoodie1_3.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
@@ -107,11 +107,11 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 2</div>
+                <div class="numbertext">1 / 2 <span class="textDiscount">BLACK FRIDAY</span></div>
                 <img class="open-popup" src="img/beani1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 2</div>
+                <div class="numbertext">2 / 2 <span class="textDiscount">BLACK FRIDAY</span></div>
                 <img class="open-popup" src="img/beani2.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
