--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
     </nav>
     <div class="main-body">
       <div class="section" id="home">
-        <a class="section-buttons" href="#items">BLACK FRIDAY</a>
+        <a class="section-buttons" href="#items">Shop Now</a>
       </div>
       <div class="section" id="items">
         <ul class="items-list">
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
+                <div class="numbertext">1 / 3</div>
                 <img class="open-popup" src="img/hoodie1_1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
+                <div class="numbertext">2 / 3</div>
                 <img class="open-popup" src="img/hoodie1_2.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">3 / 3 <span class="textDiscount">BLACK FRIDAY</span></div>
+                <div class="numbertext">3 / 3</div>
                 <img class="open-popup" src="img/hoodie1_3.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
@@ -54,8 +54,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“BLACK SHEEP” HOODIE </h1>
-              <h2>70 lv.</h2>
-              <span class="discount">90 lv.</span>
+              <h2>90 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -107,11 +106,11 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
-                <div class="numbertext">1 / 2 <span class="textDiscount">BLACK FRIDAY</span></div>
+                <div class="numbertext">1 / 2</div>
                 <img class="open-popup" src="img/beani1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
-                <div class="numbertext">2 / 2 <span class="textDiscount">BLACK FRIDAY</span></div>
+                <div class="numbertext">2 / 2</div>
                 <img class="open-popup" src="img/beani2.png" loading="lazy">
               </div>
               <a class="prev">&#10094;</a>
@@ -120,8 +119,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“DEVOTION” BEANIE</h1>
-              <h2>25 lv.</h2>
-              <span class="discount">30 lv.</span>
+              <h2>30 lv.</h2>
             </div>
           </div>
         </ul>
