maintain the products

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>“BLACK SHEEP” HOODIE </h1>
+              <h1>“BLACK SHEEP” HOODIE</h1>
               <h2>90 lv.</h2>
             </div>
           </div>
@@ -75,31 +75,8 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>Out of Stock</p>
-              <h1>“VOAM*” EMBROIDERY HOODIE </h1>
-              <h2>90 lv.</h2>
-            </div>
-          </div>
-          <div class="product-block">
-            <div class="slideshow-container">
-              <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img class="open-popup" src="img/hoodie3_1.png" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img class="open-popup" src="img/hoodie3_2.png" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img class="open-popup" src="img/hoodie3_3.png" loading="lazy">
-              </div>
-              <a class="prev">&#10094;</a>
-              <a class="next">&#10095;</a>
-            </div>
-            <div class="product-content open-popup">
-              <p>Out of Stock</p>
-              <h1>“MONDE NOIR” HOODIE </h1>
+              <p>In Stock</p>
+              <h1>“VOAM*” EMBROIDERY HOODIE</h1>
               <h2>90 lv.</h2>
             </div>
           </div>
@@ -120,6 +97,25 @@
               <p>In Stock</p>
               <h1>“DEVOTION” BEANIE</h1>
               <h2>30 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/Devotion_B_front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/Devotion_B_back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>“DEVOTION” T-SHIRT</h1>
+              <h2>50 lv.</h2>
             </div>
           </div>
         </ul>
