--- a/index.html
+++ b/index.html
@@ -38,6 +38,29 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/devotion_combo.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Devotion_B_front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/beani1.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>“DEVOTION” COMBO</h1>
+              <h2>70 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
                 <img class="open-popup" src="img/hoodie1_1.png" loading="lazy">
               </div>
               <div class="mySlides fade">
@@ -54,7 +77,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“BLACK SHEEP” HOODIE</h1>
-              <h2>90 lv.</h2>
+              <h2>80 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -77,7 +100,26 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“VOAM*” EMBROIDERY HOODIE</h1>
-              <h2>90 lv.</h2>
+              <h2>95 lv.</h2>
+            </div>
+          </div>
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/Devotion_B_front.png" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/Devotion_B_back.png" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>“DEVOTION” T-SHIRT</h1>
+              <h2>55 lv.</h2>
             </div>
           </div>
           <div class="product-block">
@@ -99,25 +141,7 @@
               <h2>30 lv.</h2>
             </div>
           </div>
-          <div class="product-block">
-            <div class="slideshow-container">
-              <div class="mySlides fade">
-                <div class="numbertext">1 / 2</div>
-                <img class="open-popup" src="img/Devotion_B_front.png" loading="lazy">
-              </div>
-              <div class="mySlides fade">
-                <div class="numbertext">2 / 2</div>
-                <img class="open-popup" src="img/Devotion_B_back.png" loading="lazy">
-              </div>
-              <a class="prev">&#10094;</a>
-              <a class="next">&#10095;</a>
-            </div>
-            <div class="product-content open-popup">
-              <p>In Stock</p>
-              <h1>“DEVOTION” T-SHIRT</h1>
-              <h2>50 lv.</h2>
-            </div>
-          </div>
+          
         </ul>
       </div>
       <div class="section" id="about">
