--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“DEVOTION” COMBO</h1>
-              <h2>70 lv.</h2>
+              <h2>60 lv.</h2>
+              <span class="discount">70 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -77,7 +78,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“BLACK SHEEP” HOODIE</h1>
-              <h2>80 lv.</h2>
+              <h2>60 lv.</h2>
+              <span class="discount">80 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -100,7 +102,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“VOAM*” EMBROIDERY HOODIE</h1>
-              <h2>95 lv.</h2>
+              <h2>80 lv.</h2>
+              <span class="discount">95 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -119,7 +122,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“DEVOTION” T-SHIRT</h1>
-              <h2>55 lv.</h2>
+              <h2>45 lv.</h2>
+              <span class="discount">55 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -138,7 +142,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“DEVOTION” BEANIE</h1>
-              <h2>30 lv.</h2>
+              <h2>20 lv.</h2>
+              <span class="discount">30 lv.</span>
             </div>
           </div>
           
