--- a/index.html
+++ b/index.html
@@ -34,6 +34,79 @@
       </div>
       <div class="section" id="items">
         <ul class="items-list">
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/TRACKSUIT_1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/TRACKSUIT_2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>MIDNIGHT GREEN TRACKSUIT</h1>
+              <h2>180 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 4</div>
+                <img class="open-popup" src="img/TRACKSUIT_HOODIE_1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 4</div>
+                <img class="open-popup" src="img/TRACKSUIT_HOODIE_2.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 4</div>
+                <img class="open-popup" src="img/TRACKSUIT_HOODIE_3.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img class="open-popup" src="img/TRACKSUIT_HOODIE_4.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>MIDNIGHT GREEN HOODIE</h1>
+              <h2>100 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/TRACKSUIT_SWEATPANTS_1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/TRACKSUIT_SWEATPANTS_2.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/TRACKSUIT_SWEATPANTS_3.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>MIDNIGHT GREEN SWEATPANTS</h1>
+              <h2>100 lv.</h2>
+            </div>
+          </div>
+
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
@@ -78,7 +151,7 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>“BLACK SHEEP” HOODIE</h1>
-              <h2>60 lv.</h2>
+              <h2>65 lv.</h2>
               <span class="discount">80 lv.</span>
             </div>
           </div>
