--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>MIDNIGHT GREEN TRACKSUIT</h1>
-              <h2>180 lv.</h2>
+              <h2>150 lv.</h2>
+              <span class="discount">180 lv.</span>
             </div>
           </div>
 
@@ -125,10 +126,9 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>“DEVOTION” COMBO</h1>
               <h2>60 lv.</h2>
-              <span class="discount">70 lv.</span>
             </div>
           </div>
           <div class="product-block">
@@ -193,10 +193,9 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>“DEVOTION” T-SHIRT</h1>
               <h2>50 lv.</h2>
-              <span class="discount">55 lv.</span>
             </div>
           </div>
           <div class="product-block">
