--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>“VOAM*” EMBROIDERY HOODIE</h1>
               <h2>80 lv.</h2>
               <span class="discount">95 lv.</span>
