--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/T-SHIRT_1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/T-SHIRT_2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>DEVOTION TEE WHITE</h1>
+              <h2>55 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
                 <img class="open-popup" src="img/TRACKSUIT_1.jpg" loading="lazy">
               </div>
               <div class="mySlides fade">
