--- a/index.html
+++ b/index.html
@@ -38,6 +38,102 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee-Black.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>EMBROIDERY TEE BLACK</h1>
+              <h2>60 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee-White.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/Embroidery-Tee2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>EMBROIDERY TEE WHITE</h1>
+              <h2>60 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Black.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/AGWYT1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/AGWYT2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT TEE BLACK</h1>
+              <h2>55 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/AGWYT-White.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/AGWYT1.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/AGWYT2.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT TEE BLACK</h1>
+              <h2>55 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
                 <img class="open-popup" src="img/T-SHIRT_1.jpg" loading="lazy">
               </div>
