--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="product-content open-popup">
               <p>In Stock</p>
-              <h1>AGWYT TEE BLACK</h1>
+              <h1>AGWYT TEE WHITE</h1>
               <h2>55 lv.</h2>
             </div>
           </div>
