--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT TEE BLACK</h1>
               <h2>55 lv.</h2>
             </div>
