--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>EMBROIDERY TEE BLACK</h1>
-              <h2>60 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">60 lv.</span>
             </div>
           </div>
 
@@ -79,7 +80,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>EMBROIDERY TEE WHITE</h1>
-              <h2>60 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">60 lv.</span>
             </div>
           </div>
 
@@ -147,7 +149,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>DEVOTION TEE WHITE</h1>
-              <h2>55 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">55 lv.</span>
             </div>
           </div>
 
