--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>EMBROIDERY TEE WHITE</h1>
               <h2>55 lv.</h2>
-              <span class="discount">60 lv.</span>
             </div>
           </div>
 
