--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>DEVOTION TEE WHITE</h1>
               <h2>50 lv.</h2>
-              <span class="discount">55 lv.</span>
             </div>
           </div>
 
