--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT TEE WHITE</h1>
               <h2>60 lv.</h2>
             </div>
