add discount agwyt

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <div class="product-content open-popup">
               <p>In Stock</p>
               <h1>AGWYT TEE BLACK</h1>
-              <h2>60 lv.</h2>
+              <h2>50 lv.</h2>
+              <span class="discount">60 lv.</span>
             </div>
           </div>
 
