--- a/index.html
+++ b/index.html
@@ -38,6 +38,189 @@
           <div class="product-block">
             <div class="slideshow-container">
               <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tracksuit-Gray.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tracksuit-Gray-Back.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT* Grey Tracksuit</h1>
+              <h2>200 lv.</h2>
+              <span class="discount">220 lv.</span>
+            </div>
+          </div>
+
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit-Back.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit-Text.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Voam* Black Tracksuit</h1>
+              <h2>190 lv.</h2>
+              <span class="discount">205 lv.</span>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tee-White.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tee-White-Back.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT* TEE White</h1>
+              <h2>60 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tee-Black.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img class="open-popup" src="img/AGWYT-Tee-Black-Back.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT* TEE Black</h1>
+              <h2>60 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/Voam-Hoodie-Black.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Voam-Hoodie-Black-Back.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit-Text.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Voam* Hoodie black</h1>
+              <h2>105 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Grey-Hoodie.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Grey-Hoodie-Back.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Tracksuit-Gray.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT* Grey Hoodie</h1>
+              <h2>100 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Pants.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/Voam-Black-Tracksuit-Back.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>Voam* Black Pants</h1>
+              <h2>100 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Grey-Pants.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Tracksuit-Gray.jpg" loading="lazy">
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img class="open-popup" src="img/AGWYT-Tracksuit-Gray-Back.jpg" loading="lazy">
+              </div>
+              <a class="prev">&#10094;</a>
+              <a class="next">&#10095;</a>
+            </div>
+            <div class="product-content open-popup">
+              <p>In Stock</p>
+              <h1>AGWYT* Grey Pants</h1>
+              <h2>110 lv.</h2>
+            </div>
+          </div>
+
+          <div class="product-block">
+            <div class="slideshow-container">
+              <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <img class="open-popup" src="img/AGWYT-Black.jpg" loading="lazy">
               </div>
