--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT* Grey Tracksuit</h1>
               <h2>200 lv.</h2>
               <span class="discount">220 lv.</span>
@@ -75,7 +75,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Voam* Black Tracksuit</h1>
               <h2>190 lv.</h2>
               <span class="discount">205 lv.</span>
@@ -140,7 +140,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Voam* Hoodie black</h1>
               <h2>105 lv.</h2>
             </div>
@@ -164,7 +164,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT* Grey Hoodie</h1>
               <h2>100 lv.</h2>
             </div>
