--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>Voam* Black Pants</h1>
               <h2>100 lv.</h2>
             </div>
@@ -212,7 +212,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT* Grey Pants</h1>
               <h2>110 lv.</h2>
             </div>
@@ -236,7 +236,7 @@
               <a class="next">&#10095;</a>
             </div>
             <div class="product-content open-popup">
-              <p>In Stock</p>
+              <p>Out of Stock</p>
               <h1>AGWYT TEE BLACK</h1>
               <h2>50 lv.</h2>
               <span class="discount">60 lv.</span>
